# typical

./: CMakeLists.txt  README.md  main.cpp
include/: typical.hpp
include/typical/: application.hpp  compose.hpp  conditional.hpp  constant.hpp  function_support.hpp  list_predicates.hpp  type_manipulation.hpp  type_predicates.hpp  type_traits.hpp  utilities.hpp
include/typical/algorithms/: at.hpp  count_if.hpp  drop_front.hpp  filter.hpp  flatten.hpp  front.hpp  index_of.hpp  join.hpp  partition.hpp  reverse.hpp  size.hpp  take.hpp  transform.hpp  zip.hpp
tests/: application.cpp  at.cpp  compose.cpp  conditional.cpp  constant.cpp  count_if.cpp  drop_front.cpp  filter.cpp  flatten.cpp  front.cpp  function_support.cpp  index_of.cpp  join.cpp  list_predicates.cpp  partition.cpp  reverse.cpp  size.cpp  take.cpp  transform.cpp  type_manipulation.cpp  type_predicates.cpp  type_traits.cpp  zip.cpp
